--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 <body>
   <!-- NEON SIDEBAR -->
   <div class="sidebar">
-    <a href="https://kovacsalexandru77.github.io/N2/ target="_blank">
+    <a href="https://netfree2.cc/tv/home target="_blank">
       <img src="https://ia601805.us.archive.org/21/items/netflix1_202506/netflix1.png" alt="NetFlix" width="24" height="24" style="vertical-align: middle;">
     </a>
-    <a href="https://kovacsalexandru77.github.io/N2/" target="_blank"><i class="bi bi-house"></i></a>
+    <a href="https://netfree2.cc/mobile/home" target="_blank"><i class="bi bi-house"></i></a>
     <a href="https://kovacsalexandru77.github.io/movies2/" target="_blank"><i class="bi bi-film"></i></a>
     <a href="https://kovacsalexandru77.github.io/Series2/" target="_blank"><i class="bi bi-collection-play"></i></a>
   </div>
